<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/residentHomeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/picture_frame"
        android:title="@string/menu_in_main_home" />
    <item
        android:id="@+id/residentListFragment"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/menu_in_main_list" />
    <item
        android:id="@+id/residentRegisterFragment"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/menu_in_main_register" />
    <item
        android:id="@+id/aboutUsFragment"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_in_main_about" />
</menu>