<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resident.ResidentRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmResidentRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmResidentRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <EditText
                android:id="@+id/fmResidentRegisterName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmResidentRegisterDestination"
                android:layout_width="377dp"
                android:layout_height="92dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/label_Destination"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/RequiresRiskAssessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_RequiresRiskAssessment" />

            <EditText
                android:id="@+id/fmResidentRegisterDescription"
                android:layout_width="375dp"
                android:layout_height="98dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/label_Description"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/fmResidentRegisterStartDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_start_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmResidentRegisterOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="@string/label_owner"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmResidentRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_register"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>