<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resident.ResidentSearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fmResidentSearchTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Search"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fmResidentSearchName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchTitle" />

        <EditText
            android:id="@+id/fmResidentSearchDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/label_start_date"
            android:inputType="date"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchName"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchName"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchName" />

        <Button
            android:id="@+id/fmResidentSearchButtonCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/label_cancel"
            app:layout_constraintStart_toStartOf="@+id/fmResidentSearchDate"
            app:layout_constraintTop_toBottomOf="@+id/fmResidentSearchDate" />

        <Button
            android:id="@+id/fmResidentSearchButtonSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="25dp"
            android:text="@string/label_search"
            app:layout_constraintBottom_toBottomOf="@+id/fmResidentSearchButtonCancel"
            app:layout_constraintEnd_toEndOf="@+id/fmResidentSearchDate"
            app:layout_constraintStart_toEndOf="@+id/fmResidentSearchButtonCancel"
            app:layout_constraintTop_toTopOf="@+id/fmResidentSearchButtonCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>